Fix spacing around spacer

--- a/sass/content/_home.scss
+++ b/sass/content/_home.scss
@@ -71,7 +71,7 @@ body.home {
 	}
 
 	.wp-block-spacer.full-width-spacer {
-		margin: 0 -141px 0 -81px;
+		margin: 140px -141px 80px -81px;
 		background: $page-bg;
 
 		@media ( max-width: 782px ) {
