--- a/style.css
+++ b/style.css
@@ -1146,7 +1146,7 @@ body.home .entry-content {
       padding-right: 40px; } }
 
 body.home .wp-block-spacer.full-width-spacer {
-  margin: 0 -141px 0 -81px;
+  margin: 140px -141px 80px -81px;
   background: #452F35; }
   @media (max-width: 782px) {
     body.home .wp-block-spacer.full-width-spacer {
